[package]
name = "fbx_sanitizer"
version = "0.1.0"
authors = ["John Austin <kleptine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbxcel-dom = "0.0.6"
anyhow = "1.0.38"
walkdir = "2.3.1"
mint = "0.5.6"
ordered-float = "2.0"
itertools = "0.10.0"
log = "0.4.14"
env_logger = "0.8.3"
regex = "1.4.5"
lazy_static = "1.4.0"
clap = "2.33.0"
content_inspector = "0.2.4"
indexmap = "1.6.2"
assert_cmd = "1.0.3"

[dependencies.cgmath]
version = "0.18.0"
features = ["mint"]

[patch.crates-io]
fbxcel-dom = { path = "../fbxcel-dom" }